--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
@@ -47,7 +47,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel1" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="jPanel5" pref="434" max="32767" attributes="0"/>
+                      <Component id="jPanel5" pref="410" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               </Group>
@@ -172,7 +172,7 @@
                                               <Component id="lbSoLuong" min="-2" max="-2" attributes="0"/>
                                               <Component id="lbLoaiSP" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace pref="33" max="32767" attributes="0"/>
+                                          <EmptySpace pref="50" max="32767" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="lbcSL1" alignment="1" min="-2" max="-2" attributes="0"/>
                                               <Component id="lbcLoai" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -518,9 +518,9 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-                          <Component id="confirmBtn" pref="184" max="32767" attributes="0"/>
+                          <Component id="confirmBtn" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
-                          <Component id="deleteBtn" pref="156" max="32767" attributes="0"/>
+                          <Component id="deleteBtn" max="32767" attributes="0"/>
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
